sample/src/strategy_pattern/good/FlyWithTail.java
package strategy_pattern.good;

public class FlyWithTail implements FlyBehavior {

  @Override
  public void fly() {
    System.out.println("꼬리로 난다.");
  }
}
