sample/src/strategy_pattern/bad/Flyable.java
package strategy_pattern.bad;

public interface Flyable {
  void fly();
}
